[gd_scene load_steps=6 format=3 uid="uid://0wdfjha3x3yw"]

[ext_resource type="Script" uid="uid://5bfql4ngr8yu" path="res://scenes/pause.gd" id="1_0ep5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcpj6"]
bg_color = Color(0.497474, 0.497474, 0.497474, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v81o"]
bg_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdb6x"]
bg_color = Color(0.960351, 0.960351, 0.960351, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc2tp"]
bg_color = Color(0.964742, 0.964742, 0.964742, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ep5p")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 87.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.960351, 0.960351, 0.960351, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wcpj6")
text = "||"

[node name="Panel" type="Panel" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 317.0
offset_top = 90.0
offset_right = 821.0
offset_bottom = 416.0

[node name="ContinueButton" type="Button" parent="Panel"]
process_mode = 3
layout_mode = 0
offset_left = 144.0
offset_top = 28.0
offset_right = 342.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_8v81o")
text = "CONTINUE
"

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 141.0
offset_top = 123.0
offset_right = 348.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_hdb6x")
text = "RESTART
"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 142.0
offset_top = 224.0
offset_right = 354.0
offset_bottom = 299.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uc2tp")
text = "MENU
"
